# newsletter

./: .dockerignore  .env  Cargo.toml  Dockerfile  README.md  configuration.yaml
.github/workflows/: cd.yml  ci.yml
config/: configuration.yaml  local.yaml  prod.yaml
migrations/: 20250426105030_create_subscriptions_table.sql
scripts/: deploy.sh  init_postgres.sh
src/: .main.rs.swp  config.rs  lib.rs  main.rs
src/routes/: subscription.rs
tests/: health_check.rs  helpers.rs  subscriptions.rs
