[package]
name = "email_newsletter"
version = "0.1.0"
edition = "2024"
authors = ["Thrishank <thrishankkalluru@gmail.com>"]

[lib]
path = "src/lib.rs"

[dependencies]
sqlx = { version = "0.8.5", features = [
  "macros",
  "runtime-tokio-rustls",
  "uuid",
  "postgres",
  "chrono",
  "migrate",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
actix-web = "4.10.2"
serde = { version = "1.0.219", features = ["derive"] }
reqwest = "0.12.15"
