[package]
name = "email_newsletter"
version = "0.1.0"
edition = "2024"
authors = ["Thrishank <thrishankkalluru@gmail.com>"]

[lib]
path = "src/lib.rs"

[dependencies]
sqlx = { version = "0.8.5", features = [
  "macros",
  "runtime-tokio-rustls",
  "uuid",
  "postgres",
  "chrono",
  "migrate",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
actix-web = "4.10.2"
serde = { version = "1.0.219", features = ["derive"] }
reqwest = "0.12.15"
config = { version = "0.14", default-features = false, features = ["yaml"] }
uuid = { version = "1.16.0", features = ["v4"] }
chrono = { version = "0.4.41" }
env_logger = "0.11.8"
log = "0.4.27"
